trying to fix a problem when the bottom part of the website gets cut off on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -2981,6 +2981,11 @@ select {
     justify-content: center;
   }
 }
+html,
+body {
+  height: 100%;
+}
+
 html {
   font-family: "Cabin";
 }
